2019-08-10: add desc,delete by query support
2019-08-14: add function score support
2019-08-14: add reindex support
2019-09-04: add group by support
2019-09-08: add geo polygon support and update geo bounding box syntax
2019-09-10: add dis max support
2019-09-23: add geo shape support
2019-12-14: add insert/update support